# cli_corrector

./: .gitignore  Cargo.toml  README.md  cli_corrector.py  cli_corrector_config.json  cli_corrector_history.json  requirements.txt  setup.py
.jules/: bolt.md
cli-corrector/: .cli_corrector_prompt_history  cli_corrector.py  cli_corrector_history.json  requirements.txt
src/: ai.rs  commands.rs  config.rs  main.rs
