[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
tokio = { version = "1.51.0", features = ["full"] }
